# nect

./: .gitignore  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
about/licensing-and-citation/: index.html
demo/: 00_static_reconstruct_from_file.py  01_static_reconstruct_from_array.py  02_geometry_load.py  03_dynamic_reconstruction_video.py  04_dynamic_reconstruction_export_volume.py  05_parallel_beam.py  06_export_video_projections.py  07_export_video_projections_from_config.py  07_reconstruct_from_cfg_file.py  download_demo_data.py
docs/: index.md
docs/about/: licensing-and-citation.md
docs/userguide/: data_analysis.md
docs/userguide/config/: index.md
docs/userguide/demo/: index.md
docs/userguide/start/: index.md  installation.md  quickstart.md
nect/: __init__.py  config.py  download_demo_data.py  gui.py  reconstruct.py  static_export.py
nect/cfg/dynamic/: double_hash_grid.yaml  kplanes_dynamic.yaml  quadcubes.yaml
nect/cfg/static/: hash_grid.yaml  kplanes.yaml
nect/sampling/: geometry.py
nect/src/experiments/: baseline.ipynb
nect/src/model/: unet.py
nect/src/phantom/: demo_3d_phantom.py  phantom_config.py  phantom_usage.ipynb  pore.py  utils.py
nect/src/sampling/: leap.py  methods.py  sampler.py  scikit_image.py  visualize_sampling.ipynb
nect/src/test/: test_sampling.py
nect/trainers/: pore_trainer.py
reference/SUMMARY/: index.html
reference/nect/: index.html
reference/torch_extra/: index.html
search/: search_index.json
userguide/config/: index.html
userguide/geometry/: index.html
(+68 files in other folders)
