[build-system]
requires = ["setuptools", "wheel", "torch~=2.5", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "nect"
version = "0.0.1"
description = "4D-CT reconstruction using Machine Learning and AI"
authors = [
    {name = "Håkon Nese", email = "haakon.nese@gmail.com"},
    {name = "Henrik Friis", email = "henrik.friis@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "opencv-python",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "scipy>=1.10",
    "jinja2>=3.1",
    "tqdm>=4.66",
    "loguru>=0.7",
    "pynvml>=11.5",
    "python-dotenv>=1.0",
    "dacite>=1.8.1",
    "torchinfo>=1.8.0",
    "tensorboard>=2.16.2",
    "tifffile==2024.5.22",
    "napari>=0.5.1",
    "pyqt5>=5.15.11",
    "torch~=2.5",
    "lightning~=2.5",
    "torchvision~=0.20",
]


[project.optional-dependencies]
tinycudann = ["tinycudann @ git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
